shuffle and face

--- a/id75-interpolations-demo-2.html
+++ b/id75-interpolations-demo-2.html
@@ -14,7 +14,8 @@
       <div id="content">
         <canvas id='id75-canvas' style="background-color: beige;" draggable="false" onmousemove="canvas_mousemove(event)"
             onclick="canvas_click(event)" onmousedown="canvas_mousedown(event)" onmouseup="canvas_mouseup(event)"></canvas>
-      </div>
+            <img id="picture" src="./images/cute.PNG" style="display: none;">
+        </div>
       <script src="id75.js"></script>
    </body>
 </html>
