ny plan for statemachinen

--- a/id75-interpolations-demo-2.html
+++ b/id75-interpolations-demo-2.html
@@ -12,10 +12,9 @@
    </head>
    <body>
       <div id="content">
-        <canvas id='id75-canvas' style="background-color: beige;" draggable="false" onmousemove="canvas_mousemove(event)"
-            onclick="canvas_click(event)" onmousedown="canvas_mousedown(event)" onmouseup="canvas_mouseup(event)"></canvas>
-            <img id="picture" src="./images/cute.PNG" style="display: none;">
+        <canvas id='id75-canvas' style="background-color: beige;" draggable="false"></canvas>
+            <img id="picture" src="./images/Screenshot 2023-02-03 at 15.56.55.png" style="display: none;">
         </div>
-      <script src="id75.js"></script>
+      <script src="id75-tree.js"></script>
    </body>
 </html>
