spiral virker i farver

--- a/id75-interpolations-demo-2.html
+++ b/id75-interpolations-demo-2.html
@@ -15,6 +15,6 @@
         <canvas id='id75-canvas' style="background-color: beige;" draggable="false"></canvas>
             <img id="picture" src="./images/Screenshot 2023-02-03 at 15.56.55.png" style="display: none;">
         </div>
-      <script src="id75-tree.js"></script>
+      <script src="id75.js"></script>
    </body>
 </html>
